corrected alignment desktop

--- a/cpsautos.co.uk/cover.css
+++ b/cpsautos.co.uk/cover.css
@@ -70,7 +70,7 @@ body {
 /*
  * Header
  */
-.masthead-brand {
+.brand {
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 50px;
